freest/test/prog/Invalid/SessionTypes/PartiallyAppliedSendBis/PartiallyAppliedSendBis.fst
module PartiallyAppliedSendBis where

f : Int -> !Int -1-> Skip
f c = send c
